2002-05-10  Michael Koch  <konqueror@gmx.de>

	* src/Codecs/Bach.cpp/h:
	  New class implementing the BACH codec.

2002-05-07  Michael Koch  <konqueror@gmx.de>

	* src/Objects/common.py, src/Objects/gen_cpp.py:
	  Use latest API from Atlas-Python

2002-11-04  Al Riddoch  <alriddoch@zepler.org>

	* src/Filter.h, src/Funky/FEncoder.cpp, src/Funky/FEncoder.h,
	  src/Message/MEncoder.cpp, src/Message/MEncoder.h,
	  src/Objects/BaseObject.cpp, src/Objects/BaseObject.h:
	  Rename Encoder.* files so that IDE's don't get confused by
	  the duplicate object file names.

	* src/Objects/common.py: Default to recent python version.
	  Users of older versions of python may have to hack this file.

2001-10-07  Al Riddoch  <alriddoch@zepler.org>

This entry covers the changes made by Jesse Jones for which no ChangeLog
entries were commited. It also includes further changes made by myself.

	* src/Objects/BaseObject.cpp: Re-ordered includes.

	* src/Objects/BaseObject.h: Added include to ensure header is stand
	  alone. Make accessor method const.  Make sure non-callable
	  function returns something when asserts are not compiled in.

	* src/Bridge.h: Fixed malformed declarations for mapBegin and
	  listBegin.

	* src/Codec.cpp, src/Objects/loadDefaults.cpp: Re-ordered includes to
	  ensure that respective headers are stand alone.

	* src/Net/Stream.cpp: Re-ordered includes to ensure that header is
	  stand alone. Made some functions static. Removed invalid default
	  arguements as these belong in the headers. Removed stage style
	  TODO as these are not used in the Atlas-C++ code. Added some
	  casts.

	* src/Codecs/XML.cpp: Added some casts.

	* src/Message/Encoder.h: Added a bunch of inherited methods to
	  prevent them from being hidden by the new overloaded methods.
	  Removed confusing "Inherited" typedef. Re-styled inherited
	  methods.

	* src/Exception.h: Fixed misspelled "UNKNOW". Made getDescription a
	  const method.
