@@ -1,0 +1,5 @@
+Makefile
+Makefile.in
+.deps
+.libs
+atlas_convert
