@@ -1,0 +1,7 @@
+bin_PROGRAMS = atlas_convert
+
+INCLUDES = -I../
+
+atlas_convert_SOURCES = atlas_convert.cpp
+
+atlas_convert_LDFLAGS = -L../ -L../Codecs/ -L../Message/ -lAtlas -lAtlasCodecs -lAtlasMessage
