@@ -1,3 +1,10 @@
+2002-05-12  Michael Koch  <konqueror@gmx.de>
+
+	* src/Utititlies/*:
+	  Added new utility to convert ATLAS files using another codec.
+
+	  This doesnt get compiled currently.
+
 2002-05-10  Michael Koch  <konqueror@gmx.de>
 
 	* src/Codecs/Bach.cpp/h:
